force-app/main/default/objects/VisitReport__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Visit Report</relationshipLabel>
    <relationshipName>Visit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>