force-app/main/default/objects/VisitReport__c/fields/DiscussedBuildingProjects__c.field-meta.xml
<CustomField>
    <fullName>DiscussedBuildingProjects__c</fullName>
    <label>Discussed Building Projects</label>
    <summaryForeignKey>VisitReportBuildingProjectRelation__c.VisitReport__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>