force-app/main/default/objects/VisitReport__c/fields/DiscussedOpportunities__c.field-meta.xml
<CustomField>
    <fullName>DiscussedOpportunities__c</fullName>
    <label>Discussed Opportunities</label>
    <summaryForeignKey>VisitReportOpportunityRelation__c.VisitReport__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>