force-app/main/default/objects/VisitReport__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <label>Duration</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>