force-app/main/default/objects/VisitReport__c/fields/VisitDate__c.field-meta.xml
<CustomField>
    <fullName>VisitDate__c</fullName>
    <label>Visit Date</label>
    <type>Date</type>
</CustomField>